dark mode fix?

--- a/css/style.css
+++ b/css/style.css
@@ -219,31 +219,28 @@ h2 {
     background-color: #00796b;
 }
 
+/* Dark Mode */
+body.dark-mode {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+body.dark-mode .navbar,
+body.dark-mode .dropdown-menu,
+body.dark-mode .container,
+body.dark-mode .alert {
+    background-color: #1f1f1f !important;
+    color: #fff;
+}
+
+/* Triche pour iframe */
+body.dark-mode iframe {
+    filter: invert(90%) hue-rotate(180deg);
+}
+
 @media screen and (max-width: 768px) {
     .partner-container {
         flex-direction: column;
         align-items: center;
-    }
-
-    /* Dark Mode */
-    body.dark-mode {
-        background-color: #121212;
-        color: #ffffff;
-    }
-
-    body.dark-mode .navbar,
-    body.dark-mode .dropdown-menu,
-    body.dark-mode .alert {
-        background-color: #1f1f1f !important;
-        color: #fff;
-    }
-    body.dark-mode .container {
-        background-color: #1f1f1f !important;
-        color: #fff;
-    }
-
-    /* Triche pour iframe */
-    body.dark-mode iframe {
-        filter: invert(90%) hue-rotate(180deg);
-    }
+    }    
 }
